			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.1829 2001/08/05 05:02:08 itojun Exp $

<200108>
Sun Aug  5 14:00:04 JST 2001  itojun@iijlab.net
	* sys/netinet6/ipsec.c: improve cached ipsec policy lookup on connected
	  SOCK_STREAM PCBs.

2001-08-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/advapitest/sender.c (main): added a new option '-n
	nexthop' to test IPV6_NEXTHOP.

2001-08-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/{ip6_output.c, in6_src.c}: supported
	the IPV6_NEXTHOP ancillary data / socket option.
	At this moment, the next hop should be an AF_INET6 socket address.

2001-08-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_is_addr_neighbor): check on-link
	prefixes (not addresses) to see if a given address is a neighbor
	in a given link.

<200107>
Tue Jul 31 22:54:57 JST 2001	suz@sdl.hitachi.co.jp
	* kame/kame/pim6sd/cfparse.y: command-line debug-option works now.

Tue Jul 31 sakane@kame.net
	* kame/racoon:
	the phase1 deletion should be postponed until there is no phase2.
	this was probably made a consensus at vpn bakeoff on Oct, 1998.

2001-07-29  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/(several files): several improvements on the
	IPv6 output routine:
	- added a seprate function in6_selectroute() to centralize the
	  route and outgoing interface selection algorithm
	- call in6_selectroute() from in6_selecsrc() and ip6_output(), and
	  use same codebase for both unicast and multicast packets as much
	  as possible
	- added stricter (and thorough) scope checks for outgoing packets
	  (e.g. this check would prevent a packet generated by
	  'ping6 -S ::1 fe80::1%ne0' from being sent)
	- renamed in6_addr2scopeid() to in6_addr2zoneid() to be more intuitive
	  in terms of the scope architecture
	- made in6_addr2zoneid take care of the loopback address
	- set the tentative flag before joinging multicast addresses, so